# merkle

./: AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  release-please-config.json
.github/workflows/: claim-crate.yml  commit-lint.yml  release.yml
benches/: node_lookup.rs
design/: PLAN.md
design/command_cleanup/: PLAN.md  README.md  agent_status_spec.md  command_list.md  ignore_list_spec.md  node_deletion_and_append_only.md  node_deletion_spec.md  provider_status_spec.md  provider_validate_spec.md  scan_command_spec.md  status_command_spec.md  validate_command_spec.md  watch_command_spec.md  workspace_status_requirements.md
design/logging/: log-to-file.md
design/observability/: phase2_implementation_review.md
design/refactor/: PLAN.md  dependency_gate_checklist.md  phase1_implementation_plan.md  phase2_implementation_plan.md  phase8_implementation_plan.md  src_module_structure_map.md
design/workflow_foundation/: initial_prompt.md  research_terms_and_foundations.md  src_tree_context_validation.md  tracking_and_verification_plan.md  workflow_foundation_spec.md
docs/: domain-shortlist-2026-03-02.md
docs/bootstrap/: phase1_phases.md  phase1c_explanation.md
docs/context/: PLAN.md  context_generate_command.md  context_get_command.md  spec.md
docs/workflow/: head_index_persistence_spec.md  logging_spec.md  phase2_phases.md  phase2_spec.md  watch_mode_spec.md
prompts/: docs-writer.md
scripts/: README.md  check_domain_boundaries.sh
src/: agent.rs  api.rs  cli.rs  composition.rs  config.rs  context.rs  error.rs  heads.rs  ignore.rs  init.rs  lib.rs  logging.rs  metadata.rs  provider.rs  regeneration.rs  store.rs  synthesis.rs  telemetry.rs  tooling.rs  views.rs  workspace.rs  workspace_status.rs
src/agent/: commands.rs  identity.rs  profile.rs  registry.rs
src/cli/: help.rs  output.rs  parse.rs  presentation.rs  route.rs
src/context/: facade.rs  frame.rs  generation.rs  query.rs  queue.rs  types.rs
src/frame/: id.rs  mod.rs  queue.rs  set.rs  storage.rs
src/generation/: mod.rs  orchestrator.rs  plan.rs
src/metadata/: frame_types.rs  frame_write_contract.rs
src/progress/: event.rs  ingestor.rs  mod.rs  session.rs  store.rs
src/provider/: commands.rs
src/store/: mod.rs  node_metadata.rs  persistence.rs
src/telemetry/: emission.rs  events.rs  facade.rs  routing.rs  sessions.rs  sinks.rs  summary.rs  types.rs
src/tooling/: adapter.rs  ci.rs  (+3 more)
tests/: integration_tests.rs  o1_lookup_verification.rs  property_tests.rs
(+102 files in other folders)
