[package]
name = "merkle"
version = "0.1.0"
edition = "2021"
authors = ["Merkle Contributors"]
description = "Deterministic filesystem state management using Merkle trees"
license = "MIT OR Apache-2.0"
repository = "https://github.com/yourorg/merkle"

[dependencies]
# Hashing
blake3 = "1.5"

# Merkle tree for frame sets
rs_merkle = "1.5"

# Serialization
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"

# Storage
sled = "0.34"

# Filesystem
walkdir = "2.4"
dunce = "1.0"
unicode-normalization = "0.1"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Concurrency
parking_lot = "0.12"

[dev-dependencies]
# Testing
proptest = "1.4"
tempfile = "3.8"
hex = "0.4"  # For test vector hex encoding/decoding

# Benchmarking
criterion = "0.5"

[[bench]]
name = "node_lookup"
harness = false
