[package]
name = "meld"
version = "0.1.0"
edition = "2021"
authors = ["Meld Contributors"]
description = "Deterministic filesystem state management using Merkle trees"
license = "MIT OR Apache-2.0"
repository = "https://github.com/jerkytreats/meld"

[dependencies]
# Hashing
blake3 = "1.5"

# Merkle tree for frame sets
rs_merkle = "1.5"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
toml = "0.8"
chrono = "0.4"

# Configuration
config = "0.14"

# Storage
sled = "0.34"

# Filesystem
walkdir = "2.4"
dunce = "1.0"
unicode-normalization = "0.1"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Concurrency
parking_lot = "0.12"

# Async support
async-trait = "0.1"

# HTTP client for provider integration
reqwest = { version = "0.11", features = ["json"] }

# Streaming support
futures = "0.3"

# CLI support
clap = { version = "4.0", features = ["derive"] }
dialoguer = "0.11"
comfy-table = "7.2"
owo-colors = "4.2"

# File watching for editor integration
notify = "6.0"

# Hex encoding/decoding
hex = "0.4"

# Async runtime
tokio = { version = "1.0", features = ["rt", "rt-multi-thread", "macros"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "ansi", "chrono"] }

[dev-dependencies]
# Testing
proptest = "1.4"
tempfile = "3.8"
tokio = { version = "1.0", features = ["rt", "rt-multi-thread", "macros"] }

# Benchmarking
criterion = "0.5"

[[bin]]
name = "meld"
path = "src/bin/meld.rs"

[[bench]]
name = "node_lookup"
harness = false
